# car_color_classification

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  commands_tl.py  infer.py  label_encoder.pkl  label_encoder.pkl.dvc  pyproject.toml  submission.csv  train.py
.dvc/: config
car_color_classification/: .gitignore  requirements.txt  submission.csv
car_color_classification/logger/: __init__.py
car_color_classification/models/: __init__.py  resnet101.py
car_color_classification/utils/: __init__.py  args.py  config.py  datasets.py  load_data.py
configs/: custom_config.yaml  inference.yaml
configs/base/: default_arguments.yaml  default_arguments_tl.yaml
data/: .gitignore  train.tar.gz.dvc  val.tar.gz.dvc
nvidia-triton/: Dockerfile  client.py
nvidia-triton/1/: .gitignore
nvidia-triton/model_repository/onnx-resnet/: config.pbtxt
nvidia-triton/model_repository/onnx-resnet/1/: model_resnet101_12242023.025725_3.pth.dvc
