[tool.poetry]
name = "car-color-classification"
version = "0.1.0"
description = "Classification of car colors"
authors = ["addicted-by <ras.unlucky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
torch = { version = "2.0.1+cu117", source="torch"}
torchvision = { version="^0.15.2+cu117", source="torch"}

gdown = ">=4.7.1"
numpy = ">=1.23.4"
pillow = ">=10.0.1"
pyyaml = ">=6.0.1"
scikit-learn = ">=1.3.1"
tqdm = ">=4.64.1"
tensorboard = "^2.14.1"
natsort = "^8.4.0"
pandas = "^2.1.1"
fire = "^0.5.0"
dvc = {extras = ["gdrive"], version = "^3.30.3"}
lightning = "^2.1.2"
mlflow = "^2.8.1"
onnx = "^1.15.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["car_color_classification"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
